--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,17 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Civ Randomizer</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="players">Players</string>
+    <string name="civs_per_player">Civs per player</string>
+    <string name="randomize">Randomize</string>
+    <string name="randomizer">Randomizer</string>
+    <string name="civilizations">Civilizations</string>
+    <string name="leader">Leader</string>
+    <string name="nation">Nation</string>
+    <string name="author">Author</string>
+    <string name="done">Done</string>
+    <string name="delete">Delete</string>
+    <string name="player_n">Player N</string>
+    <string name="add">Add</string>
 
 </resources>
