--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="delete">Delete</string>
     <string name="player_n">Player N</string>
     <string name="add">Add</string>
+    <string name="not_enough_civilizations">Not enough civilizations</string>
+    <string name="player">Player</string>
 
 </resources>
